--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
-/* @font-face {
+@font-face {
     font-family: 'Roboto', sans-serif;
-    src: url('Stanley.woff2') format('woff2')
-  } */
+    src: url('https://fonts.googleapis.com/css?family=Roboto');
+  }
   
   * {
     margin: 0;
@@ -15,7 +15,7 @@
     -webkit-font-smoothing: antialiased;
     background-color: black;
     color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   
   h1 {
