--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
 @font-face {
     font-family: 'Roboto', sans-serif;
     src: url('https://fonts.googleapis.com/css?family=Roboto');
-  }
-  
-  * {
+}
+
+* {
     margin: 0;
     padding: 0;
-  }
-  
-  body {
+}
+
+body {
     margin: 0 auto;
     max-width: 720px;
     padding: 20px;
@@ -16,98 +16,107 @@
     background-color: black;
     color: white;
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  
-  h1 {
+}
+
+h1 {
     font-weight: 600;
     font-size: 5rem;
-  }
-  
-  p, a {
+}
+
+p,
+a {
     font-size: 1.33rem;
     line-height: 2rem;
-  }
-  
-  a {
+}
+
+a {
     margin-right: 10px;
     color: inherit;
     text-decoration: none;
     border-bottom: 2px solid #fff;
-  }
-  
-  @media only screen and (max-width: 450px) {
+}
+
+@media only screen and (max-width: 450px) {
     h1 {
-      font-size: 3rem;
-      border-bottom: 2px solid #fff;
+        font-size: 3rem;
+        border-bottom: 2px solid #fff;
     }
-    p, a {
-      margin-top: 10px;
-      font-size: 1.2rem;
-      line-height: 1.8rem;
+
+    p,
+    a {
+        margin-top: 10px;
+        font-size: 1.2rem;
+        line-height: 1.8rem;
     }
-  }
-  
-  .main {
-    margin-top: 20%;
-  }
-  
-  .desc {
-    padding-top: 1rem;
-  }
-  
-  .links {
-    margin-top: 1rem;
-  }
-  
-  #lottie {
+}
+
+.desc {
+    padding-top: 0.5rem;
+}
+
+.links {
+    margin-top: 0.5rem;
+}
+
+#lottie {
     min-height: 30px;
     min-width: 30px;
     position: relative;
     margin: 10px;
-  }
-  
-  .stats {
+}
+
+.stats {
     display: flex;
     flex-direction: row;
     margin-top: 20%;
     border-top: 2px solid #939393;
-  }
-  
-  #loc-text {
+}
+
+#loc-text {
     margin-top: 0.55rem;
     font-size: 1rem;
     line-height: 2rem;
     color: #939393;
-  }
-  
-  @media only screen and (min-width: 450px) {
+}
+
+@media only screen and (min-width: 450px) {
     .linear-wipe {
-      background: linear-gradient(to right, #8C83FF 20%, #007DFF 40%, #FF7F93 60%, #59EFE5 80%, #8C83FF 100%);
-      background-size: 200% auto;
-      color: #000;
-      background-clip: text;
-      text-fill-color: transparent;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      -webkit-animation: shine 10s linear infinite;
-              animation: shine 10s linear infinite;
+        background: linear-gradient(to right, #8C83FF 20%, #007DFF 40%, #FF7F93 60%, #59EFE5 80%, #8C83FF 100%);
+        background-size: 200% auto;
+        color: #000;
+        background-clip: text;
+        text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -webkit-animation: shine 10s linear infinite;
+        animation: shine 10s linear infinite;
     }
+
     @-webkit-keyframes shine {
-      to {
-        background-position: 200% center;
-      }
+        to {
+            background-position: 200% center;
+        }
     }
+
     @keyframes shine {
-      to {
-        background-position: 200% center;
-      }
+        to {
+            background-position: 200% center;
+        }
     }
-  }
+}
 
-  #name {
-      font-size: 7rem;
-  }
+#name {
+    font-size: 7rem;
+}
 
-  #intro {
-      font-size: 3rem;
-  }
+#name1 {
+    color: #ffa500
+}
+
+#name1 {
+    color: #2bbfa9
+}
+
+#intro {
+    font-size: 3rem;
+}
